Fixing accommodation tiles on mobile

--- a/src/components/AccommodationTile.module.scss
+++ b/src/components/AccommodationTile.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   width: 40rem;
   max-width: 90%;
-  height: 18em;
+  min-height: 18rem;
   margin: 3rem 0;
   padding: 2rem;
   background: rgba(#705c50, 85%);
