--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -20,6 +20,9 @@
 }
 .header-level-3 {
   font-size: 2.6rem;
+  margin-top: 2rem;
+  margin-bottom: 0.5rem;
+
   @media screen and (min-width: 600px) {
     font-size: 3.5rem;
     margin-bottom: 1rem;
